fix breaking style on mobile

--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -97,6 +97,7 @@ hr {
   margin: -$spacing-unit 0 0 0;
   h1 {
     font-size: 48px;
+    line-height: normal;
   }
   p {
     padding: 0;
