--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -147,7 +147,6 @@ blockquote {
   margin: 0 0 20px;
   position: relative;
   color: $quote-text-color;
-  text-align: justify;
   border-radius: 0 4px 4px 0;
   box-shadow: $box-shadow;
 
